@@ -1,5 +1,15 @@
 Current development version
 
+  - chg: `org-remark-global-tracking-mode' has been simplified.
+
+         .org-remark-tracking file is no longer necessary and can be safely
+         deleted from the user's Emacs configuraiton directory if present.
+         Automatic activation of `org-remark-mode' is done by looking the
+         presence of a marginal notes file for current buffer open.
+
+         `org-remark-global-tracking-mode' itself is still relevant and
+         recommended to be setup as was previously in the user manual.
+
   - add: Option to use relative links from the marginal notes back to the source
 
          Adding user option org-remark-source-path-function.  The default is
